--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -85,6 +85,10 @@
     background-color: #faf3e0;
 }
 
+.loginButton-userDropdown a{
+    text-decoration: none;
+    color: black;
+}
 
 .arrow-icon{
     transition: transform 0.3s;
