--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -2,9 +2,10 @@
     display: flex;
     position: relative;
     flex-wrap: wrap;
-    max-width: 1152px;
+    max-width: 1184px;
     height: 50px;
     padding: 1rem 1.5rem;
+    margin: 0 -1rem;
     background-color: #e6ded2;
     justify-content: flex-start;
     justify-content: space-between;
