کامل شدن قابلیت های سبد خرید و طراحی و ریسپانسیو کردنش و حل مشکل عوض شدن رنگ دکمه ها در آیفون و همین طور مشکل دارک مود

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -44,6 +44,8 @@
 }
 
 .login-form button{
+    -webkit-appearance: none;
+    appearance: none;
     width: 200px;
     height: 40px;
     margin: 30px auto;
