--- a/src/pages/home/products/Products.css
+++ b/src/pages/home/products/Products.css
@@ -12,6 +12,7 @@
     padding: 1rem;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+    transition: transform ease 0.3s;
 }
 
 .product-card:hover{
@@ -31,6 +32,8 @@
 }
 
 .product-card button{
+    -webkit-appearance: none;
+    appearance: none;
     width: 135px;
     font-size: 0.9rem;
     font-family: 'Vazirmatn', Tahoma, sans-serif;
