--- a/src/pages/home/products/Products.css
+++ b/src/pages/home/products/Products.css
@@ -40,6 +40,7 @@
     padding: 0.5rem;
     border-radius: 5px;
     background-color: #e6ded2;
+    color: black;
     border: 1px solid black;
     margin: auto;
     cursor: pointer;
