--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -53,6 +53,7 @@
     font-size: 1.2rem;
     border-radius: 10px;
     background-color: white;
+    color: black;
     transition: background-color ease 0.3s;
 }
 
