--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@ body{
     font-family: 'Vazirmatn', Tahoma, sans-serif;
     max-width: 1200px;
     margin: auto;
-    padding: 0 1rem;
+    padding: 0 1rem 2rem 1rem;
 }
