--- a/src/pages/home/products/Products.css
+++ b/src/pages/home/products/Products.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    justify-content: center;
 }
 
 .product-card{
@@ -25,6 +24,16 @@
     height: auto;
 }
 
+.name-p{
+    cursor: pointer;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: all 0.3s ease;
+}
 
 .price-p{
     text-align: end;
