--- a/src/navbar/Navbar.css
+++ b/src/navbar/Navbar.css
@@ -11,6 +11,7 @@
     justify-content: flex-start;
     justify-content: space-between;
     align-items: center;
+    z-index: 10;
 }
 
 /* right nav */
@@ -102,6 +103,12 @@
     justify-content: center;
     align-items: center;
     margin: auto;
+    transition: all ease 0.3s;
+}
+
+.logout-button:hover{
+    background-color: red;
+    color: white;
 }
 
 /* input nav */
